[project]
name = "power-usage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "holidays>=0.75",
    "joblib>=1.5.1",
    "loguru>=0.7.3",
    "mlflow>=3.1.0",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.0",
]
